<resources>
    <string name="app_name">Travel Romania</string>
    <string name="Aspetti">Questi sono i vari Aspetti della Romania</string>
    <string name="aspetti_romania">Aspetti Romania</string>
    <string name="aspetti_sociali_della_romania_nclicca_qui">Aspetti Sociali Della Romania, \nClicca Qui!</string>
    <string name="aspetti_storici">Aspetti Storici</string>
    <string name="aspetti_fisici_della_romania_nclicca_qui">Aspetti Fisici Della Romania, \nClicca Qui!</string>
    <string name="todo">TODO</string>
    <string name="aspetti_fisici">Aspetti Fisici</string>
    <string name="aspetti_storici_della_romania_nclicca_qui">Aspetti Storici Della Romania, \nClicca Qui!</string>
    <string name="aspetti_sociali">Aspetti Sociali</string>
    <string name="aspetti_politici">Aspetti Politici</string>
    <string name="aspetti_politici_della_romania_nclicca_qui">Aspetti Politici Della Romania, \nClicca Qui!</string>

</resources>