<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:onClick="apriFisici"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ITA.Italia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/aspetti_romania"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/Aspetti"
            android:textColor="#272727"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="619dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FECE2F"
                        android:onClick="apriStorici"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/a1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/aspetti_storici"
                            android:textColor="#ffff"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/a1"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/aspetti_storici_della_romania_nclicca_qui"
                            android:textColor="#ffff" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:layout_alignParentEnd="true"
                            android:maxHeight="100dp"
                            android:src="@drawable/nicolae_ceausescu">

                        </ImageView>


                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FF6741"
                        android:onClick="apriSociali"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/a2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/aspetti_sociali"
                            android:textColor="#ffff"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/a2"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/aspetti_sociali_della_romania_nclicca_qui"
                            android:textColor="#ffff" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:layout_alignParentEnd="true"
                            android:maxHeight="100dp"
                            android:src="@drawable/nicolae_ceausescu">

                        </ImageView>


                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#CFE1E6"
                        android:onClick="apriPolitici"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/a3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/aspetti_politici"
                            android:textColor="#ffff"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/a3"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/aspetti_politici_della_romania_nclicca_qui"
                            android:textColor="#ffff" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:layout_alignParentEnd="true"
                            android:maxHeight="100dp"
                            android:src="@drawable/nicolae_ceausescu">

                        </ImageView>


                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#607800"
                        android:onClick="apriFisici"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/a4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/aspetti_fisici"
                            android:textColor="#ffff"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/a4"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/aspetti_fisici_della_romania_nclicca_qui"
                            android:textColor="#ffff" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:layout_alignParentEnd="true"
                            android:maxHeight="100dp"
                            android:src="@drawable/nicolae_ceausescu">

                        </ImageView>


                    </RelativeLayout>


                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="815dp"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FECE2F"
                android:onClick="apriStorici"
                android:padding="10dp">

                <TextView
                    android:id="@+id/a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/aspetti_storici"
                    android:textColor="#ffff"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/a1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/aspetti_storici_della_romania_nclicca_qui"
                    android:textColor="#ffff" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:maxHeight="100dp"
                    android:src="@drawable/nicolae_ceausescu">

                </ImageView>


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF6741"
                android:onClick="apriSociali"
                android:padding="10dp">

                <TextView
                    android:id="@+id/a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/aspetti_sociali"
                    android:textColor="#ffff"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/a2"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/aspetti_sociali_della_romania_nclicca_qui"
                    android:textColor="#ffff" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:maxHeight="100dp"
                    android:src="@drawable/nicolae_ceausescu">

                </ImageView>


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#CFE1E6"
                android:onClick="apriPolitici"
                android:padding="10dp">

                <TextView
                    android:id="@+id/a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/aspetti_politici"
                    android:textColor="#ffff"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/a3"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/aspetti_politici_della_romania_nclicca_qui"
                    android:textColor="#ffff" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:maxHeight="100dp"
                    android:src="@drawable/nicolae_ceausescu">

                </ImageView>


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#607800"
                android:onClick="apriFisici"
                android:padding="10dp">

                <TextView
                    android:id="@+id/a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/aspetti_fisici"
                    android:textColor="#ffff"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/a4"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/aspetti_fisici_della_romania_nclicca_qui"
                    android:textColor="#ffff" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:maxHeight="100dp"
                    android:src="@drawable/nicolae_ceausescu">

                </ImageView>


            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>